[BUGFIX] Adjusted Lists and fixed jumping images

--- a/assets/css/module/_bislist.scss
+++ b/assets/css/module/_bislist.scss
@@ -31,6 +31,8 @@
 
 .bis-list-icon {
   border: 2px dotted $gray-200;
+  display: block;
+  overflow: hidden;
   &.bis-icon-small {
     height: 22px;
     width: 22px;
